--- a/auth/package.json
+++ b/auth/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node-dev src/index.ts",
-    "tsc": "tsc"
+    "start": "nodemon --exec ts-node src/index.ts"
   },
   "keywords": [],
   "author": "Aaron Brown",
@@ -13,9 +12,14 @@
   "dependencies": {
     "@types/express": "^4.17.17",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
+    "express-validator": "^6.12.0",
+    "mongoose": "^7.3.4",
     "ts-node-dev": "^2.0.0"
   },
   "devDependencies": {
+    "nodemon": "^2.0.22",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   }
 }
