--- a/auth/package.json
+++ b/auth/package.json
@@ -10,10 +10,14 @@
   "author": "Aaron Brown",
   "license": "MIT",
   "dependencies": {
+    "@types/cookie-session": "^2.0.44",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
+    "cookie-session": "^2.0.0",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "express-validator": "^6.12.0",
+    "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.4",
     "ts-node-dev": "^2.0.0"
   },
