--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "devDependencies": {
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1"
+  },
+  "dependencies": {
+    "@types/node": "^20.5.1",
+    "node-nats-streaming": "^0.3.2",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.1.6"
   }
 }
-
