--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -18,6 +18,14 @@ build:
             dest: .
       docker:
         dockerfile: Dockerfile
+    - image: kilowulf/tickets #us.gcr.io/ticketing-dev-388123/auth
+      context: tickets
+      sync:
+        manual:
+          - src: "src/**/*.ts"
+            dest: .
+      docker:
+        dockerfile: Dockerfile
 manifests:
   rawYaml:
     - ./infra/k8s/*
