--- a/tickets/package.json
+++ b/tickets/package.json
@@ -18,7 +18,7 @@
   "author": "Aaron Brown",
   "license": "MIT",
   "dependencies": {
-    "@qtiks/common": "^1.0.11",
+    "@qtiks/common": "^1.0.12",
     "@types/cookie-session": "^2.0.44",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
@@ -28,6 +28,7 @@
     "express-validator": "^6.12.0",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.4",
+    "node-nats-streaming": "^0.3.2",
     "ts-node-dev": "^2.0.0"
   },
   "devDependencies": {
