--- a/tickets/Dockerfile
+++ b/tickets/Dockerfile
@@ -4,7 +4,7 @@ ENV CI=true
 
 WORKDIR /app
 COPY package.json .
-RUN npm install --only=prod
+RUN npm install --omit=dev
 COPY . .
 
 CMD ["npm", "start"]
